RESOLVED FIXED53833
[GTK] plugins/plugin-document-back-forward.html fails
https://bugs.webkit.org/show_bug.cgi?id=53833
Summary [GTK] plugins/plugin-document-back-forward.html fails
Adam Barth
Reported 2011-02-04 18:40:40 PST
plugins/plugin-document-back-forward.html fails after being added. The test is supposed to test our behavior when loading a plugin a second time, but the initial load doesn't seem to be working. Maybe the test plugin isn't fully implemented in GTK? Not really sure how to debug the issue.
Attachments
Patch (3.05 KB, patch)
2011-02-04 19:19 PST, Martin Robinson
no flags
Martin Robinson
Comment 1 2011-02-04 19:12:57 PST
r77706 added a new test plugin functionality, but did not add it to the Unix version of the plugin.
Martin Robinson
Comment 2 2011-02-04 19:19:27 PST
WebKit Review Bot
Comment 3 2011-02-04 19:43:29 PST
http://trac.webkit.org/changeset/77721 might have broken GTK Linux 64-bit Debug
Adam Barth
Comment 4 2011-02-04 19:46:14 PST
Comment on attachment 81337 [details] Patch There's a unix version of the plugin? Thanks...
Martin Robinson
Comment 5 2011-02-04 20:03:30 PST
(In reply to comment #4) > (From update of attachment 81337 [details]) > There's a unix version of the plugin? Thanks... No problem. Thanks for the review!
WebKit Commit Bot
Comment 6 2011-02-04 20:17:44 PST
Comment on attachment 81337 [details] Patch Clearing flags on attachment: 81337 Committed r77727: <http://trac.webkit.org/changeset/77727>
WebKit Commit Bot
Comment 7 2011-02-04 20:17:48 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.