2011-02-04  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Adam Barth.

        [GTK] plugins/plugin-document-back-forward.html fails
        https://bugs.webkit.org/show_bug.cgi?id=53833

        * platform/gtk/Skipped: Unskip test which is now passing.
2011-02-04  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Adam Barth.

        [GTK] plugins/plugin-document-back-forward.html fails
        https://bugs.webkit.org/show_bug.cgi?id=53833

        Add the new "alert on load" functionality for the Unix version of the
        test plugin. This functionality was originally introduced in r77706.

        * DumpRenderTree/unix/TestNetscapePlugin/TestNetscapePlugin.cpp:
        (webkit_test_plugin_new_instance): Add new plugin fuctionality.

Canonical link: https://commits.webkit.org/67795@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77727 268f45cc-cd09-0410-ab3c-d52691b4dbfc